// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ETradeColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-dx0ghv-ETradeColor"
  >
    <div
      class="css-1ejv39n-ETradeColor"
    >
      <div
        class="css-1hwz39e-ETradeColor"
      >
        <div
          class="css-esr948-ETradeColor"
        >
          Negative red
        </div>
        <div>
          #cc0000
        </div>
        <div />
        <div>
          $negative
        </div>
      </div>
    </div>
    <div
      class="css-1hgxxih-ETradeColor"
    >
      <div
        class="css-m3719-ETradeColor"
      >
        <div>
          Error state
        </div>
        <div
          class="css-144hmk0-ETradeColor"
        >
          Data trending down
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ETradeColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1gc1jl3"
  >
    <div
      class="css-dx0ghv-ETradeColor"
    >
      <div
        class="css-1610yxw-ETradeColor"
      >
        <div
          class="css-1hwz39e-ETradeColor"
        >
          <div
            class="css-esr948-ETradeColor"
          >
            Purple
          </div>
          <div>
            #5627d8
          </div>
          <div />
          <div>
            $link-color
          </div>
        </div>
      </div>
      <div
        class="css-1hgxxih-ETradeColor"
      >
        <div
          class="css-m3719-ETradeColor"
        >
          <div />
          <div
            class="css-144hmk0-ETradeColor"
          >
            Text links and other interactive elements
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-dx0ghv-ETradeColor"
    >
      <div
        class="css-1ejv39n-ETradeColor"
      >
        <div
          class="css-1hwz39e-ETradeColor"
        >
          <div
            class="css-esr948-ETradeColor"
          >
            Negative red
          </div>
          <div>
            #cc0000
          </div>
          <div />
          <div>
            $negative
          </div>
        </div>
      </div>
      <div
        class="css-1hgxxih-ETradeColor"
      >
        <div
          class="css-m3719-ETradeColor"
        >
          <div>
            Error state
          </div>
          <div
            class="css-144hmk0-ETradeColor"
          >
            Data trending down
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-dx0ghv-ETradeColor"
    >
      <div
        class="css-18m5wxq-ETradeColor"
      >
        <div
          class="css-1hwz39e-ETradeColor"
        >
          <div
            class="css-esr948-ETradeColor"
          >
            Positive green
          </div>
          <div>
            #107a1b
          </div>
          <div>
            .text-positive
          </div>
          <div>
            $positive
          </div>
        </div>
      </div>
      <div
        class="css-1hgxxih-ETradeColor"
      >
        <div
          class="css-m3719-ETradeColor"
        >
          <div>
            Success state
          </div>
          <div
            class="css-144hmk0-ETradeColor"
          >
            Data trending up
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-dx0ghv-ETradeColor"
    >
      <div
        class="css-1xrvtjh-ETradeColor"
      >
        <div
          class="css-1hwz39e-ETradeColor"
        >
          <div
            class="css-esr948-ETradeColor"
          >
            Body gray
          </div>
          <div>
            #242424
          </div>
          <div>
            .body-text-color
          </div>
          <div>
            $body-text-color
          </div>
        </div>
      </div>
      <div
        class="css-1hgxxih-ETradeColor"
      >
        <div
          class="css-m3719-ETradeColor"
        >
          <div />
          <div
            class="css-144hmk0-ETradeColor"
          >
            Headers and body text
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-dx0ghv-ETradeColor"
    >
      <div
        class="css-mnab2t-ETradeColor"
      >
        <div
          class="css-1hwz39e-ETradeColor"
        >
          <div
            class="css-esr948-ETradeColor"
          >
            Background accent color
          </div>
          <div>
            #f1ecff
          </div>
          <div>
            .background-accent-color-1
          </div>
          <div>
            $background-accent-color-1
          </div>
        </div>
      </div>
      <div
        class="css-1hgxxih-ETradeColor"
      >
        <div
          class="css-m3719-ETradeColor"
        >
          <div />
          <div
            class="css-144hmk0-ETradeColor"
          >
            Background color
          </div>
          <div
            class="css-esr948-ETradeColor"
          >
            <svg
              aria-hidden="true"
              class="css-1xoidnz-ETradeColor"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M1.5 8a6.5 6.5 0 0110.535-5.096l-9.131 9.131A6.472 6.472 0 011.5 8zm2.465 5.096a6.5 6.5 0 009.131-9.131l-9.131 9.131zM8 0a8 8 0 100 16A8 8 0 008 0z"
                fill-rule="evenodd"
              />
            </svg>
            Not for text
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
